RESOLVED FIXED302114
TestWebKitAPI.WebKit2.NoCrashWhenInitializeWebViewWhenChangingUserDefaults is crashing
https://bugs.webkit.org/show_bug.cgi?id=302114
Summary TestWebKitAPI.WebKit2.NoCrashWhenInitializeWebViewWhenChangingUserDefaults is...
phinehas133
Reported 2025-11-06 13:21:07 PST
see title
Attachments
phinehas133
Comment 1 2025-11-06 13:21:08 PST
phinehas133
Comment 2 2025-11-06 13:22:32 PST
EWS
Comment 3 2025-11-07 10:06:48 PST
Committed 302730@main (ceed1a8ad101): <https://commits.webkit.org/302730@main> Reviewed commits have been landed. Closing PR #53554 and removing active labels.
Jonathan Bedard
Comment 4 2025-11-07 10:37:55 PST
*** Bug 302100 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.