TestWebKitAPI.WebKit2.NoCrashWhenInitializeWebViewWhenChangingUserDefaults is crashing https://bugs.webkit.org/show_bug.cgi?id=302114 rdar://164186411

Reviewed by Jer Noble.

Moves default registration from PlaybackSessionManagerProxy constructor to
WebProcessPoolCocoa's registerUserDefaults() to avoid triggering user defaults
notifications during WebKit initialization.

* Source/WebKit/UIProcess/Cocoa/PlaybackSessionManagerProxy.mm:
(WebKit::PlaybackSessionManagerProxy::PlaybackSessionManagerProxy):
* Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::registerUserDefaults):

Canonical link: https://commits.webkit.org/302730@main